k8s/kvs.yaml
apiVersion: v1
kind: Service
metadata:
  name: kvs
spec:
  selector:
    app: kvs
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kvs
spec:
  selector:
    matchLabels:
      app: kvs
  template:
    metadata:
      labels:
        app: kvs
    spec:
      containers:
        - name: kvs
          image: kvs
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
