k8s/kvs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kvs-ingress
  labels:
    name: kvs-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kvs
                port:
                  number: 8080
